# mpiper

./: .air.toml  .dockerignore  .env.example  .gitignore  CLAUDE.md  METRICS_SETUP.md  README.md  docker-compose.loadtest.yml  docker-compose.observability.yml  docker-compose.webhooks.yml  docker-compose.yml  go.mod  go.sum  mpiper.toml  poetry.toml  pyproject.toml  requirements.txt  taskfile.yml  test-metrics.ps1  test-traces.ps1
.claude/: CLAUDE.md  settings.json
.claude/agents/: crawler.md  interviewer.md  reasoner.md
.github/slack/: failure.json  success.json
.github/workflows/: build-and-push.yml  ci.yml  release-lts.yml
cmd/mint-api-key/: main.go
cmd/server/: main.go
db/migrations/: 001_seed.sql
deploy/docker/: docker-compose.observability.yml  mpiper.dockerfile  worker.dockerfile
deploy/k8s/: README.md  api-deployment.yaml  configmap.yaml  ingress.yaml  migration-job.yaml  pdb.yaml  postgres.yaml  pvc.yaml  rbac.yaml  redis.yaml  (+3 more)
experiments/: 0001-worker-saturation.md  0002-concurrent-worker.md  0003-webhook-throughput.md
loadtest/: README.md  closed_model.js  lib.js  open_model.js  run.sh
observability/: loki.yml  otel-collector.yml  prometheus.rules.yml  prometheus.yml  promtail.yml  start.sh  stop.sh  tempo.yml
references/: METRICS_IMPLEMENTATION.md  PROMETHEUS_QUERIES.md  README.md  TRACES_QUICKREF.md  TRACES_VERIFICATION.md
scripts/: _apikey.sh  demo-e2e.sh  mint-api-key.sh  test-webhooks.sh
taskfiles/: build.yml  db.yml  dev.yml  docker.yml  lint.yml  test.yml
tests/: performance_suite_test.go
worker/: __main__.py  webhooks.py
(+134 files in other folders)
