[project]
name = "mpiper"
version = "0.1.0"
description = "A consumer for the mpiper queue system"
authors = [
    {name = "Shantanu Mane",email = "shantanu.mane.200@outlook.com"}
]
license = {file = "LICENSE"}
readme = "README"
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary]",
    "redis",
    "google-cloud-storage",
    "boto3",
    "python-magic",
    "Pillow",
    "attrs",
    "pydantic",
    "structlog",
    "requests",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mpiper"
version = "0.1.0"
description = "A consumer for the mpiper queue system"
authors = ["Shantanu Mane <shantanu.mane.200@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
psycopg = "^3.3.2"
redis = "^7.1.0"
pillow = "^12.0.0"
psycopg-pool = "^3.3.0"
google-cloud-storage = "^3.7.0"
python-dotenv = "^1.2.1"

[tool.poetry.scripts]
mpiper_consumer = "worker.consumer:main"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"

